[package]
name = "iooo-server"
version = "0.1.0"
authors = ["Koppa <t@ioover.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
postgres = { version = "0.15", features = ["with-uuid", "with-serde_json", "with-chrono"] }
dotenv = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
